--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,6 +117,11 @@ jobs:
           echo "analysis<<$DELIM" >> "$GITHUB_OUTPUT"
           echo "$RESPONSE" >> "$GITHUB_OUTPUT"
           echo "$DELIM" >> "$GITHUB_OUTPUT"
+    
+      - name: Debug Flowise JSON output
+        run: |
+          echo "----- FLOWISE OUTPUT -----"
+          cat flowise_output.json || echo "[flowise_output.json not found]"
 
       - name: Comment on PR
         uses: actions/github-script@v6
@@ -126,8 +131,8 @@ jobs:
           script: |
             const raw = `${{ steps.flowise-analysis.outputs.analysis }}`.trim();
 
-            if (!raw || raw === "{}") {
-              core.warning('Flowise returned an empty or invalid response. Skipping PR comment.');
+            if (!raw || raw === "{}" || raw === "") {
+              core.warning('❗ Flowise returned an empty or invalid response. Skipping PR comment.');
               return;
             }
 
@@ -135,7 +140,8 @@ jobs:
             try {
               parsed = JSON.parse(raw);
             } catch (e) {
-              core.setFailed(`Invalid JSON from Flowise: ${e.message}\n\nRaw:\n${raw}`);
+              core.warning(`❗ Failed to parse Flowise JSON: ${e.message}`);
+              core.warning(`Raw response:\n${raw}`);
               return;
             }
 
@@ -148,3 +154,4 @@ jobs:
               issue_number: context.issue.number,
               body: `### 🤖 AI Technical Debt Analysis\n\n${message}`
             });
+
